Standardize on name

--- a/lib/softcover/article_template/config/lang.yml
+++ b/lib/softcover/article_template/config/lang.yml
@@ -10,6 +10,6 @@ aside: Box
 listing: Listing
 equation: Equation
 eq: Eq
-frontmatter: FrontMatter
-backmatter: BackMatter
+frontmatter: Frontmatter
+backmatter: Backmatter
 contents: Contents
